[metadata]
name = bbtest
classifiers =
       Development Status :: 2 - Pre-Alpha
       Programming Language :: Python
       Natural Language :: English
       Intended Audience :: Developers
       Operating System :: OS Independent
       Topic :: Software Development :: Testing
       Programming Language :: Python :: 3.7
[options]
packages = find:
