[metadata]
name = bbtest
version=0.2.0
author = cybereason
author_email = benny.daon@cybereason.com
url = https://github.com/cybereason-labs/bbtest
classifiers =
       Development Status :: 2 - Pre-Alpha
       Programming Language :: Python
       Natural Language :: English
       Intended Audience :: Developers
       Operating System :: OS Independent
       Topic :: Software Development :: Testing
       Programming Language :: Python :: 3.7
[options]
packages = find:
[entry_points]
console_scripts =
       bbhost = bbtest.cmd.rpyc_server:main
       bbhost_win_service = bbtest.cmd.rpyc_win_service:main
